--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,7 +1,7 @@
 #app {
   // 主体区域
   .main-container {
-    min-height: 100%;
+    min-height: 90%;
     transition: margin-left .28s;
     margin-left: 180px;
   }
@@ -9,10 +9,10 @@
   .sidebar-container {
     transition: width 0.28s;
     width: 180px !important;
-    height: 100%;
-    position: fixed;
+    height: 90%;
+    position: absolute;
     font-size: 0px;
-    top: 100px;
+    top: 10%;
     bottom: 0;
     left: 0;
     z-index: 1001;
