--- a/src/common/stylus/element-ui.styl
+++ b/src/common/stylus/element-ui.styl
@@ -2,8 +2,7 @@
 
 .el-table
   th
-    color: $color-theme-r
-    background: $color-theme
+    background: #1062aa
     font-size: $font-size-medium-x
     font-weight: bold
   tr
