--- a/src/common/stylus/sidebar.styl
+++ b/src/common/stylus/sidebar.styl
@@ -1,7 +1,7 @@
 #app {
   // 主体区域
   .main-container {
-    min-height: 90%;
+    min-height: 100%
     transition: margin-left .28s;
     margin-left: 180px;
   }
@@ -16,7 +16,7 @@
     left: 0;
     z-index: 1001;
     overflow: hidden;
-    //reset element-ui css
+    //重置 element-ui css
     .horizontal-collapse-transition {
       transition: 0s width ease-in-out, 0s padding-left ease-in-out, 0s padding-right ease-in-out;
     }
@@ -41,43 +41,6 @@
       border: none;
       height: 100%;
       width: 100% !important;
-    }
-  }
-  .hideSidebar {
-    .sidebar-container {
-      width: 36px !important;
-    }
-    .main-container {
-      margin-left: 36px;
-    }
-    .submenu-title-noDropdown {
-      padding-left: 10px !important;
-      position: relative;
-      .el-tooltip {
-        padding: 0 10px !important;
-      }
-    }
-    .el-submenu {
-      overflow: hidden;
-      &>.el-submenu__title {
-        padding-left: 10px !important;
-        .el-submenu__icon-arrow {
-          display: none;
-        }
-      }
-    }
-    .el-menu--collapse {
-      .el-submenu {
-        &>.el-submenu__title {
-          &>span {
-            height: 0;
-            width: 0;
-            overflow: hidden;
-            visibility: hidden;
-            display: inline-block;
-          }
-        }
-      }
     }
   }
   .sidebar-container .nest-menu .el-submenu>.el-submenu__title,
