--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -17,7 +17,7 @@ $color-text-ll = rgba(255, 255, 255, 0.8)
 //
 $bg = #2d3a4b
 $dark_gray = #889aa4
-$light_gray = #eee
+$light_gray = #f2f2f2
 
 
 //字体定义规范
