--- a/src/common/stylus/reset.styl
+++ b/src/common/stylus/reset.styl
@@ -54,3 +54,8 @@ li
 body
   -webkit-text-size-adjust: none
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+
+select
+  background-color #fff
+  width 195px
+  height: 22px
