--- a/src/common/stylus/element-ui.styl
+++ b/src/common/stylus/element-ui.styl
@@ -9,8 +9,11 @@
     background-color #f5f7fa
     font-size: $font-size-medium-x
     font-weight: bold
+    color: #333
+    text-align: center
   tr
     color: #000
+    text-align: center
 .app-breadcrumb.el-breadcrumb
   display: inline-block
   line-height: 50px
