--- a/src/common/stylus/element-ui.styl
+++ b/src/common/stylus/element-ui.styl
@@ -27,3 +27,15 @@
     color: #fff
     font-size: 28px
     margin-right: 5px
+
+.el-dialog
+  border-radius 5px
+  border 3px solid $color-dialog-header
+.el-dialog__header
+  background-color $color-dialog-header
+  padding 8px
+  text-align left
+.el-dialog__title
+  color white
+.el-dialog__headerbtn
+  top 10px
