--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -13,7 +13,7 @@ $color-text = #fefefe
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
-
+$color-dialog-header = #1262aa
 //
 $bg = #2d3a4b
 $dark_gray = #889aa4
